add featured website

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="/src/Home/HomeStyle.module.css" />
     <title>ITAG</title>
   </head>
-  <body>
+ <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,9 +40,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div class="Menu">
-      <!--<div id="bg" img src="/src/Home/Images/village01.png">-->
-      <div class="Menu-Left">
+     <!--<div class="Menu">
+      <div id="bg" img src="/src/Home/Images/village01.png">-->
+       <!--<div class="Menu-Left">
         <div class="Menu-Left_icon">
           <svg height="32" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32" data-view-component="true"
                class="octicon octicon-mark-github v-align-middle color-fg-default">
@@ -56,4 +56,4 @@
       </div>
     </div>
   </body>
-</html>
+</html>-->
